--- a/m4txblog-macros/Cargo.toml
+++ b/m4txblog-macros/Cargo.toml
@@ -10,14 +10,13 @@ proc-macro = true
 nightly = []
 
 [dependencies]
-comrak = "0.36"
-m4txblog-common = { path = "../m4txblog-common" }
-proc-macro2 = "1.0.92"
-quote = "1.0.37"
-serde = "1.0"
-serde_yml = "0.0.12"
-syn = "2.0.98"
-syntect = { version = "5", features = ["dump-load"] }
+comrak.workspace = true
+m4txblog-common.workspace = true
+proc-macro2.workspace = true
+quote.workspace = true
+serde_yml.workspace = true
+syn.workspace = true
+syntect = { workspace = true, features = ["dump-load"] }
 
 [build-dependencies]
-syntect = { version = "5", features = ["dump-create"] }
+syntect = { workspace = true, features = ["dump-create"] }
