--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ members = [
 resolver = "2"
 
 [workspace.dependencies]
+atom_syndication = "0.12"
 chrono = "0.4"
 comrak = "0.37"
 cot = { version = "0.2", default-features = false }
@@ -33,6 +34,7 @@ syntect = "5"
 nightly = ["m4txblog-macros/nightly"]
 
 [dependencies]
+atom_syndication.workspace = true
 chrono.workspace = true
 cot = { workspace = true, features = ["live-reload"] }
 indexmap.workspace = true
