feat: bump to pre-release cot 0.4; custom error page; djlint

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -59,3 +59,11 @@ repos:
     hooks:
       - id: oxipng
         args: ["-o", "max", "--strip", "safe", "--alpha"]
+
+  - repo: https://github.com/djlint/djLint
+    rev: v1.36.4
+    hooks:
+      - id: djlint
+        name: djLint
+        files: \.(html|jinja|j2)$
+        args: ["--reformat", "--lint"]
