--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,8 +19,8 @@ unexpected_cfgs = { level = "warn", check-cfg = ['cfg(nightly)'] }
 askama = "0.14"
 atom_syndication = "0.12"
 chrono = "0.4"
-comrak = "0.39"
-cot = { version = "0.3", default-features = false }
+comrak = "0.40"
+cot = { git = "https://github.com/cot-rs/cot", rev = "eca4bd61ba0cb5b421786040d31cde05cc6935ce", version = "0.3", default-features = false }
 grass = "0.13"
 indexmap = "2.10"
 lightningcss = "1.0.0-alpha.67"
