--- a/compose.dev.yml
+++ b/compose.dev.yml
@@ -1,18 +1,7 @@
 services:
-  web:
+  m4txblog:
     build: .
-    container_name: m4txblog_web
+    container_name: m4txblog
     restart: unless-stopped
     volumes:
-      - ./static-files:/app/static
-
-  proxy:
-    build: ./nginx
-    container_name: m4txblog_proxy
-    restart: unless-stopped
-    volumes:
-      - ./static-files:/app/static
-    ports:
-      - "8000:80"
-    depends_on:
-      - web
+      - ./prod.toml:/app/prod.toml
