--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,6 @@ resolver = "2"
 unexpected_cfgs = { level = "warn", check-cfg = ['cfg(nightly)'] }
 
 [workspace.dependencies]
-askama = "0.14"
 atom_syndication = "0.12"
 chrono = "0.4"
 comrak = "0.49"
@@ -35,11 +34,13 @@ syn = "2"
 syntect = { version = "5", default-features = false }
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 
+[patch.crates-io]
+cot = { git = "https://github.com/cot-rs/cot.git", rev = "9d5976aeab35e23209c6aebcc744ae896ba0a987" }
+
 [features]
 nightly = ["m4txblog-macros/nightly"]
 
 [dependencies]
-askama.workspace = true
 async-trait = "0.1.88"
 atom_syndication.workspace = true
 chrono.workspace = true
